# RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_all.ps1  serve.py
backend/: __init__.py  app.py  cache.py  chroma_store.py  database.py  document_loader.py  embedding.py  llm_env.py  milvus_client.py  milvus_writer.py  models.py  parent_chunk_store.py  rag_pipeline.py  rag_utils.py  tools.py  vector_backend.py
web/: index.html
